--- a/CharityPlatform/Shared/MainLayout.razor
+++ b/CharityPlatform/Shared/MainLayout.razor
@@ -2,31 +2,7 @@
 
 <PageTitle>CharityPlatform</PageTitle>
 <header>
-    <div class="container-fluid header-top">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 logo-dv">
-                    <img src="assets/images/logo.jpg" alt="">
-                </div>
-                <div class="col-md-9 bonto">
-                    <ul>
-                        <li>
-                            <div class="donta-btn">
-                                <p>Please make your</p>
-                                <strong>Dontatin</strong>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="voltterr-btn">
-                                <p>Time to Becom a</p>
-                                <strong>Volunteer</strong>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    <LoginDisplay />
     <NavMenu />
 </header>
 @Body
