--- a/CharityPlatform/Shared/MainLayout.razor
+++ b/CharityPlatform/Shared/MainLayout.razor
@@ -12,14 +12,18 @@
                     <ul>
                         <li>
                             <div class="donta-btn">
-                                <p>Please make your</p>
-                                <strong>Dontatin</strong>
+                                <NavLink href="/dang-nhap">
+                                    <p>Tham gia</p>
+                                    <strong>cộng đồng</strong>
+                                </NavLink>
                             </div>
                         </li>
                         <li>
                             <div class="voltterr-btn">
-                                <p>Time to Becom a</p>
-                                <strong>Volunteer</strong>
+                                <NavLink href="/dang-ky">
+                                    <p>Trở thành</p>
+                                    <strong>thành viên</strong>
+                                </NavLink>
                             </div>
                         </li>
                     </ul>
