--- a/CharityPlatform/Pages/Index.razor
+++ b/CharityPlatform/Pages/Index.razor
@@ -7,8 +7,6 @@
             <div class="row">
                 <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 col-xs-12">
                     <div class="animated bounceInDown slider-captions">
-                        <h1 class="slider-title">We Care More than 1000 Students Education</h1>
-                        <p class="slider-text hidden-xs">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's</p>
 
                     </div>
                 </div>
@@ -19,17 +17,16 @@
 
 <!-- ******************** About US Starts Here ******************* -->
 
-<div class="about-us">
+<!--<div class="about-us">
     <div class="container">
         <div class="session-title">
-            <p>Help us to Achieve our Goal</p>
-            <h2>Abouot Our Charity</h2>
+            <h2>Tổ chức tình nguyện của chúng tôi</h2>
         </div>
         <div class="about-row row">
             <div class="col-md-8">
                 <div class="abut-detail">
-                    <h4>BUILDING SCHOOL IN AFRICAN COMMUNITIES.</h4>
-                    <p>Integer vulputate vehicula dolor a eleifend. Duis aliquam condimentum sapien, eget tempor justo. Aenean porttitor nibh metus, sollicitudin egestas metus posuere et . Fusce egestas volutpat metus, in sodales sem bibendum porta. Nunc hendrerit nunc sit </p> <p> Amet tellus posuere, at malesuada sem gravida. Integer maximus ultricies augue, at dapibus elit bibendum consequat. Cras faucibus tellus eleifend, fermentum purus in, dapibus sapien. Praesent nec ornare risus. Etiam iaculis, ligula vel gravida vestibulum, urna justo posuere ante, id pretium massa arcu sed mi. Nunc a sollicitudin sem. Duis tempus</p>
+                    <h4>TỔ CHỨC QUYÊN GÓP ỦNG HỘ CÁC HOÀN CẢNH KHÓ KHĂN</h4>
+                    <p>Giới thiệu về tổ chức</p>
                 </div>
 
 
@@ -37,22 +34,22 @@
                     <div class="about-diag">
                         <div class="icon"><i class="fas fa-arrow-right"></i></div>
                         <div class="tex">
-                            <h5>$500</h5>
-                            <p>Raised by your help</p>
+                            <h5>50000000 VNĐ</h5>
+                            <p>Tổng tiền quyên góp</p>
                         </div>
                     </div>
                     <div class="about-diag">
                         <div class="icon"><i class="fas fa-arrow-right"></i></div>
                         <div class="tex">
-                            <h5>$1000</h5>
-                            <p>Immediate Need</p>
+                            <h5>1000 người</h5>
+                            <p>Số lượng người quyên góp</p>
                         </div>
                     </div>
                     <div class="about-diag">
                         <div class="icon"><i class="fas fa-arrow-right"></i></div>
                         <div class="tex">
-                            <h5>$5000</h5>
-                            <p>Our initial target</p>
+                            <h5>11235000 VNĐ</h5>
+                            <p>Mục tiêu đạt được</p>
                         </div>
                     </div>
                 </div>
@@ -62,47 +59,46 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <!-- ******************** Services Starts Here ******************* -->
 
-<section class="services container-fluid">
+<!--<section class="services container-fluid">
     <div class="container">
         <div class="session-title">
-            <p>Help us to Achieve our Goal</p>
-            <h2>URGENT CAUSES</h2>
+            <p>Giúp chúng tôi đạt được mục tiêu của mình</p>
         </div>
         <div class="service-row row">
             <div class="col-md-4">
                 <div class="servic-col">
                     <div class="servic-round">
-                        <p>Donate</p>
+                        <p>Ủng hộ</p>
                     </div>
-                    <h4>BECOME A DONATOR</h4>
-                    <p>t is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+                    <h4> TRỞ THÀNH NHÀ ỦNG HỘ</h4>
+                    <p>Một thực tế đã được thiết lập từ lâu rằng người đọc sẽ bị phân tâm bởi nội dung có thể đọc được của một trang khi xem </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="servic-col">
                     <div class="servic-round">
-                        <p>Donate</p>
+                        <p>Ủng hộ</p>
                     </div>
-                    <h4>BECOME A Volunteer</h4>
-                    <p>t is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+                    <h4>TRỞ THÀNH TÌNH NGUYỆN VIÊN</h4>
+                    <p>Một thực tế đã được thiết lập từ lâu rằng người đọc sẽ bị phân tâm bởi nội dung có thể đọc được của một trang khi xem </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="servic-col">
                     <div class="servic-round">
-                        <p>Donate</p>
+                        <p>Ủng hộ</p>
                     </div>
-                    <h4>BECOME A DONATOR</h4>
-                    <p>t is a long established fact that a reader will be distracted by the readable content of a page when looking </p>
+                    <h4>TRỞ THÀNH NHÀ ỦNG HỘ</h4>
+                    <p>Một thực tế đã được thiết lập từ lâu rằng người đọc sẽ bị phân tâm bởi nội dung có thể đọc được của một trang khi xem </p>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</section>-->
 
 
 
@@ -112,8 +108,7 @@
 <section class="container-fluid causes">
     <div class="container">
         <div class="session-title row">
-            <p>Learn more about our</p>
-            <h2>RECENT CAUSES</h2>
+            <h2>CÁC SỰ KIỆN NỔI BẬT</h2>
         </div>
         <div class="cuses-row row">
             <div class="col-md-4">
@@ -209,8 +204,7 @@
 <section class="upcomming container-flid">
     <div class="container">
         <div class="session-title row">
-            <p>KNOW AND COME TO JOIN OUR</p>
-            <h2>UPCOMING EVENTS</h2>
+            <h2>CÁC SỰ KIỆN SẮP TỚI</h2>
         </div>
         <div class="events-row row">
             <div class="col-md-4">
@@ -289,28 +283,28 @@
             <img src="assets/images/count.jpg" alt="">
         </div>
         <div class="col-lg-6 text-part">
-            <h3>DIFFERENCE WE ARE MAKING</h3>
-            <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+            <h3>SỰ KHÁC BIỆT CHÚNG TÔI ĐANG TẠO</h3>
+            <p>Nhiều gói xuất bản trên máy tính để bàn và trình chỉnh sửa trang web hiện sử dụng Lorem Ipsum làm văn bản mô hình mặc định của họ và tìm kiếm 'lorem ipsum' sẽ phát hiện ra nhiều trang web vẫn còn sơ khai. Nhiều phiên bản khác nhau đã phát triển trong nhiều năm, đôi khi là do tình cờ, đôi khi là có chủ đích (tiêm chất hài hước và những thứ tương tự).</p>
             <div class="row count">
                 <div class="col-md-4">
                     <div class="count-sing">
                         <i class="fas fa-donate"></i>
-                        <h2>$8765</h2>
-                        <b>People Contribution</b>
+                        <h2>876500VNĐ</h2>
+                        <b>Đóng góp của mọi người</b>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="count-sing">
                         <i class="fas fa-users"></i>
-                        <h2>$8765</h2>
-                        <b>Volunteer Reached</b>
+                        <h2>87655340VNĐ</h2>
+                        <b>Tình nguyện viên đã đạt được</b>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="count-sing">
                         <i class="fas fa-trophy"></i>
-                        <h2>$8765</h2>
-                        <b>Successful Project</b>
+                        <h2>8765323VNĐ</h2>
+                        <b>Dự án thành công</b>
                     </div>
                 </div>
             </div>
@@ -323,8 +317,8 @@
 
     <div class="container">
         <div class="row session-title">
-            <h2>Our Blog</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h2>Blog của chúng tôi</h2>
+            <p>Thành công dự án.</p>
         </div>
         <div class="row blog-row">
             <div class="col-md-6 col-sm-12">
@@ -335,8 +329,8 @@
                     <div class="col-sm-7 blog-content-tab">
                         <h2>Curabit finibus dui sem.</h2>
                         <p><i class="fas fa-user"><small>Admin</small></i>  <i class="fas fa-eye"><small>(12)</small></i>  <i class="fas fa-comments"><small>(12)</small></i></p>
-                        <p class="blog-desic">Lorem Ipsum, type lorem then press the shortcut. The default keyboard shortcut is the same keyboard shortcut is the </p>
-                        <a href="blog_single.html">Read More <i class="fas fa-arrow-right"></i></a>
+                        <p class="blog-desic">Dự án đã được nhiều người chú ý và ủng hộ</p>
+                        <a href="blog_single.html">Xem thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -348,8 +342,8 @@
                     <div class="col-sm-7 blog-content-tab">
                         <h2>Excepteur sint occaecat</h2>
                         <p><i class="fas fa-user"><small>Admin</small></i>  <i class="fas fa-eye"><small>(12)</small></i>  <i class="fas fa-comments"><small>(12)</small></i></p>
-                        <p class="blog-desic">Lorem Ipsum, type lorem then press the shortcut. The default keyboard shortcut is the same keyboard shortcut is the </p>
-                        <a href="blog_single.html">Read More <i class="fas fa-arrow-right"></i></a>
+                        <p class="blog-desic">Dự án đã được nhiều người chú ý và ủng hộ</p>
+                        <a href="blog_single.html">Xem thêm <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
