--- a/CharityPlatform/Shared/Footer.razor
+++ b/CharityPlatform/Shared/Footer.razor
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row">
             <p>
-                Looking For Exclusive Services?
-                <button class="btn btn-default">Donate Now</button>
+               Tìm kiếm dịch vụ độc quyền?
+                <button class="btn btn-default">Quyên góp ngay bây giờ</button>
             </p>
         </div>
     </div>
@@ -28,11 +28,10 @@
                 <div class="fotter-coo">
                     <h5>IMPORTANT LINKS</h5>
                     <ul>
-                        <li><i class="fas fa-caret-right"></i> ABOUT US</li>
-                        <li><i class="fas fa-caret-right"></i> COMPANY PROFILE</li>
-                        <li><i class="fas fa-caret-right"></i> OUR SERVICES</li>
-                        <li><i class="fas fa-caret-right"></i> CONTACT US</li>
-                        <li><i class="fas fa-caret-right"></i> READ BLOG</li>
+                        <li><i class="fas fa-caret-right"></i> Liên hệ với chúng tôi</li>
+                        <li><i class="fas fa-caret-right"></i> Hồ sơ doanh nghiệp</li>
+                        <li><i class="fas fa-caret-right"></i> Dịch vụ của chúng tối</li>
+                        <li><i class="fas fa-caret-right"></i> Xem blog</li>
                     </ul>
                 </div>
 
